# gnome-video-effects

./: .gitignore  AUTHORS  MAINTAINERS  Makefile.am  NEWS  README  autogen.sh  configure.ac  gnome-video-effects.doap  gnome-video-effects.pc.in  meson.build
effects/: Makefile.am  agingtv.effect.in  bulge.effect.in  cartoon.effect.desktop.in  cartoon.effect.in  cheguevara.effect.desktop.in  cheguevara.effect.in  chrome.effect.in  dicetv.effect.desktop.in  dicetv.effect.in  distortion.effect.desktop.in  distortion.effect.in  edgetv.effect.in  flip.effect.desktop.in  flip.effect.in  heat.effect.in  historical.effect.in  hulk.effect.in  inversion.effect.in  invertion.effect.in  kaleidoscope.effect.desktop.in  kaleidoscope.effect.in  mauve.effect.in  meson.build  mirror.effect.in  noir.effect.desktop.in  noir.effect.in  optv.effect.desktop.in  optv.effect.in  pinch.effect.in  quarktv.effect.in  radioactv.effect.in  revtv.effect.in  ripple.effect.desktop.in  ripple.effect.in  rsvgoverlay.effect.in  rsvgoverlay.effect.in.in  saturation.effect.in  scanlines.effect.desktop.in  sepia.effect.in  (+14 more)
po/: LINGUAS  Makevars  POTFILES.in  ab.po  af.po  ar.po  as.po  ast.po  be.po  be@latin.po  bg.po  bn.po  bn_IN.po  bs.po  ca.po  ca@valencia.po  ckb.po  cs.po  da.po  de.po  dz.po  el.po  en@shaw.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  ga.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  id.po  (+48 more)
tools/: create_effect_previews.sh
